--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 42px;
+}
+
 #background {
   position: fixed;
   top: 0;
@@ -25,18 +29,14 @@ body {
   z-index: -1;
 }
 
-/* TODO:
-fix how the first element starts further from the left side
-than the last element ends from the right side
-*/
 #nav {
   font-size: 18px;
-  font-weight: bolder;
   position: fixed;
   top: 0;
   margin: 0;
   width: 100%;
   left: 0;
+  padding-left: 0;
   text-align: center;
   background-color: rgba(0,0,0,0.3);
   z-index: 10;
@@ -44,6 +44,7 @@ than the last element ends from the right side
 
 #nav ul {
   display: inline;
+
 }
 
 #nav li {
@@ -62,11 +63,70 @@ than the last element ends from the right side
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+#title {
+  color: white;
+  font-size: 60px;
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 0;
+  text-shadow: 2px 2px 4px #000000;
+}
+
 #headshot {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  transform: scale(0.7, 0.7);
+  text-align: center;
   z-index: 1;
+}
+
+#headshot img {
+  transform: scale(0.7, 0.7);
+  box-shadow: 3px 3px 5px 2px #333;
+}
+
+#projects {
+  padding-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  background-color: rgba(0,0,0,0.7);
+  color: white;
+  display: block;
+}
+
+#projects h1 {
+  padding-top: 10px;
+  padding-left: 80%;
+  padding-bottom: 20px;
+}
+
+#projects img {
+  width: 20%;
+  display:inline-block;
+  text-align: center;
+}
+
+.project-row {
+  padding-bottom: 5px;
+  display: inline-block;
+  text-align: center;
+}
+
+.project-left {
+  float: left;
+  width: 45%;
+  margin-left: 5px;
+}
+
+.project-right {
+  float: right;
+  width: 45%;
+  margin-right: 5px;
+}
+
+#projects .github {
+  transform: scale(0.15,0.15);
+  position: relative;
+  float: left;
+}
+
+footer {
+  background-color: rgba(0,0,0,0.8);
 }
