Added links and a todo list

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,16 +8,6 @@ body {
 
 .navbar-header > a {
   font-size: 28px;
-  background-image: linear-gradient(black, black);
-  background-size: 0 1px;
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  transition: all .3s ease-out;
-}
-
-.navbar-header > a:hover {
-  text-decoration: none;
-  background-size: 100% 2px;
 }
 
 .navbar {
@@ -31,7 +21,7 @@ body {
   display:inline-block;
 }
 
-.nav > li > a {
+.underline {
   background-image: linear-gradient(black, black);
   background-size: 0 1px;
   background-repeat: no-repeat;
@@ -39,7 +29,7 @@ body {
   transition: all .3s ease-out;
 }
 
-.nav > li > a:hover {
+.underline:hover {
   text-decoration: none;
   background-size: 100% 1px;
 }
@@ -58,4 +48,16 @@ body {
   border-bottom-left-radius:0.25rem;
   border-bottom-right-radius:0.25rem;
   padding: 1% 0%;
+}
+
+.text-decoration-none:hover {
+  text-decoration: none;
+}
+
+.text-black {
+  color: #000;
+}
+
+.buffer {
+  margin-top: 45vh;
 }
