--- a/css/custom.css
+++ b/css/custom.css
@@ -35,13 +35,14 @@ body {
   display: inline-block;
   width: 70%;
   float: right;
+  white-space: nowrap;
 }
 
 button {
   font-size: 20px;
   background-color: transparent;
   border: none;
-  padding: 1% 5%;
+  padding: 1% 3%;
 }
 
 button > h5 {
@@ -104,7 +105,11 @@ button:focus {
 }
 
 .buffer {
-  margin-top: 45vh;
+  margin-top: 30vh;
+}
+
+.buffer-small {
+  margin-top: 5vh;
 }
 
 .shadow {
@@ -122,4 +127,48 @@ button:focus {
   transition-property: all;
   transition-duration: 0.5s;
   text-shadow: 0em 0em 0.25em #fff;
+}
+
+.inner-list {
+  list-style-type: circle;
+  margin-left: 40px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.inner-list li {
+  padding: 0.5em;
+}
+
+.w-60-center {
+  max-width: 50%;
+  margin-left: 25%;
+}
+
+li > h5 {
+  display: inline;
+}
+
+.slide-in-right-animation {
+  transform: translateX(20vw);
+  opacity: 0;
+  animation: slide-in-right-animation 1.8s ease forwards;
+}
+
+@keyframes slide-in-right-animation {
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.repo-link {
+  transform: scale3d(0.7,0.7,0.7);
+  transition: 0.3s;
+}
+
+.repo-link:hover {
+  transform: scale3d(1,1,1);
 }
