--- a/css/custom.css
+++ b/css/custom.css
@@ -84,6 +84,19 @@ button:focus {
   background-size: 100% 1px;
 }
 
+.underline-white {
+  background-image: linear-gradient(white, white);
+  background-size: 0 1px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  transition: all .3s ease-out;
+}
+
+.underline-white:hover {
+  text-decoration: none;
+  background-size: 100% 1px;
+}
+
 .top-buffer{
   margin-top: 20vh;
 }
@@ -94,7 +107,7 @@ button:focus {
 }
 
 #links {
-  background-color: #77bbff;
+  background-color: #229be6;
   border-bottom-left-radius:0.25rem;
   border-bottom-right-radius:0.25rem;
   padding: 1% 0%;
@@ -142,11 +155,6 @@ button:focus {
   padding: 0.5em;
 }
 
-.w-60-center {
-  max-width: 50%;
-  margin-left: 25%;
-}
-
 li > h5 {
   display: inline;
 }
@@ -165,10 +173,47 @@ li > h5 {
 }
 
 .repo-link {
-  transform: scale3d(0.7,0.7,0.7);
+  transform: scale3d(1.3,1.3,1.3);
   transition: 0.3s;
 }
 
 .repo-link:hover {
-  transform: scale3d(1,1,1);
+  transform: scale3d(1.5,1.5,1.5);
+}
+
+.info-section {
+  background-color: #f9f9f9;
+  box-shadow: 0 2vw 2vh rgba(0, 0, 0, 0.175);
+  width: 80%;
+  margin-left: 10%;
+  padding: 3% 10%;
+}
+
+.footer {
+  background-color: #222;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  margin-top: 15vh;
+
+}
+
+.footer-box {
+  display: inline-block;
+  padding: 3% 15%;
+  vertical-align: top;
+}
+
+.footer-box a {
+  color: #fff;
+}
+
+.img-link-div {
+  height: 24px;
+  display: inline-block;
+}
+
+.img-link {
+  max-height: 100%;
+  max-width: 100%;
 }
