--- a/css/custom.css
+++ b/css/custom.css
@@ -106,6 +106,12 @@ button:focus {
   height: auto;
 }
 
+#headshot {
+  border-radius: 50%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #links {
   background-color: #229be6;
   border-bottom-left-radius:0.25rem;
