--- a/css/custom.css
+++ b/css/custom.css
@@ -108,8 +108,12 @@ button:focus {
 
 #headshot {
   border-radius: 50%;
-  max-width: 100%;
+  max-width: 50%;
+  min-width: 50%;
   max-height: 100%;
+  min-width: 100%;
+  margin: 5%;
+  vertical-align: center;
 }
 
 #links {
@@ -145,7 +149,7 @@ button:focus {
 .media-link a:hover {
   transition-property: all;
   transition-duration: 0.5s;
-  text-shadow: 0em 0em 0.25em #fff;
+  color: #fff;
 }
 
 .inner-list {
